# cjit

./: .gitignore  CMakeLists.txt  README.md  arg_profile.h.gcov  cjit.c.gcov  codegen.c.gcov  codegen_cache.c.gcov  deferred_gc.c.gcov  func_table.c.gcov  ir_cache.c.gcov  work_queue.c.gcov
.github/workflows/: ci.yml  release.yml
build_cov/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cjit  cmake_install.cmake  demo  test_jit
examples/: demo.c
include/: cjit.h
src/: arg_profile.h  cjit.c  cli.c  codegen.c  codegen.h  codegen_cache.c  codegen_cache.h  deferred_gc.c  deferred_gc.h  func_table.c  func_table.h  ir_cache.c  ir_cache.h  work_queue.c  work_queue.h
tests/: test_jit.c
